<?xml version="1.0"?>
<package format="3">
  <name>tb3_bringup</name>
  <version>0.0.1</version>
  <description>Bringup for TB3 sim + SLAM + Nav2</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <!-- ROS 2 build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime deps -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>

  <!-- Be explicit about build type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>